@@ -1,90 +1,0 @@
-## -*- asm -*- ##############################################################
-#                                                                           #
-#                 GNAT RUN-TIME LIBRARY (GNARL) COMPONENTS                  #
-#                                                                           #
-#                                 S T A R T                                 #
-#                                                                           #
-#                               Assembly File                               #
-#                                                                           #
-#                      Copyright (C) 2012-2013 AdaCore                      #
-#                                                                           #
-#  GNAT is free software;  you can  redistribute it  and/or modify it under #
-#  terms of the  GNU General Public License as published  by the Free Soft- #
-#  ware  Foundation;  either version 3,  or (at your option) any later ver- #
-#  sion.  GNAT is distributed in the hope that it will be useful, but WITH- #
-#  OUT ANY WARRANTY;  without even the  implied warranty of MERCHANTABILITY #
-#  or FITNESS FOR A PARTICULAR PURPOSE.                                     #
-#                                                                           #
-#  As a special exception under Section 7 of GPL version 3, you are granted #
-#  additional permissions described in the GCC Runtime Library Exception,   #
-#  version 3.1, as published by the Free Software Foundation.               #
-#                                                                           #
-#  You should have received a copy of the GNU General Public License and    #
-#  a copy of the GCC Runtime Library Exception along with this program;     #
-#  see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see    #
-#  <http://www.gnu.org/licenses/>.                                          #
-#                                                                           #
-#############################################################################
-
-	.syntax unified
-	.cpu cortex-m4
-	.thumb
-
-	.section .vectors,"a"
-__vectors0:
-	.word   __stack_end /* stack top address */
-	.word   _start_ram  /* 1 Reset */
-	.word   hang        /* 2 NMI */
-	.word   hang        /* 3 HardFault */
-	.word   hang        /* 4 MemManage */
-
-	.text
-
-	.thumb_func
-	.globl _start_ram
-_start_ram:
-	/* Init stack */
-	ldr	sp,.LinitSp
-
-        /* Enable FPU */
-        movw     r0,#0xED88
-        movt     r0,#0xE000
-        ldr      r1,[r0]
-        orr      r1,r1,#(0xF << 20)
-        str      r1,[r0]
-
-        /* Wait for store to complete and reset pipeline with FPU enabled  */
-        dsb
-        isb
-
-	/* Clear .bss */
-	movw	r0,#:lower16:__bss_start
-	movt	r0,#:upper16:__bss_start
-	movw	r1,#:lower16:__bss_words
-	mov	r2,#0
-	cbz	r1,1f
-0:	str	r2,[r0],#4
-	subs	r1,r1,#1
-	bne	0b
-
-1:
-	bl	_ada_setup_pll
-	bl	main
-
-	bl	exit
-
-	.global __aeabi_ldiv0
-	.global __aeabi_idiv0
-	.global __aeabi_unwind_cpp_pr0
-	.global __aeabi_unwind_cpp_pr1
-	.global __aeabi_unwind_cpp_pr2
-	.thumb_func
-__aeabi_unwind_cpp_pr0:
-__aeabi_unwind_cpp_pr1:
-__aeabi_unwind_cpp_pr2:
-__aeabi_ldiv0:
-__aeabi_idiv0:
-hang:   b .
-
-.LinitSp:
-	.word __stack_end
